--- a/client/index.html
+++ b/client/index.html
@@ -20,10 +20,17 @@
 
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script
-      defer
-      src="%VITE_ANALYTICS_ENDPOINT%/umami"
-      data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"></script>
+    <!-- TODO: Reactivar Umami cuando VITE_ANALYTICS_WEBSITE_ID esté configurado en producción -->
+    <!-- Script condicional: solo se carga si VITE_ANALYTICS_WEBSITE_ID está definido -->
+    <script>
+      if (import.meta.env.VITE_ANALYTICS_WEBSITE_ID) {
+        const script = document.createElement('script');
+        script.defer = true;
+        script.src = import.meta.env.VITE_ANALYTICS_ENDPOINT + '/umami';
+        script.dataset.websiteId = import.meta.env.VITE_ANALYTICS_WEBSITE_ID;
+        document.body.appendChild(script);
+      }
+    </script>
   </body>
 
 </html>
